--- a/sodrtd/sodrtd.ini
+++ b/sodrtd/sodrtd.ini
@@ -36,4 +36,4 @@ Type = Tweak
 
 Before = EET_end
 
-After = bg2fixpack, c#sodtweaks, EET, themed_tweaks
+After = bg2fixpack, c#anotherfinehell, c#sodtweaks, EET, imoen_forever, themed_tweaks
