--- a/sodrtd/sodrtd.ini
+++ b/sodrtd/sodrtd.ini
@@ -20,14 +20,14 @@ All in all, this mod is supposed to connect the dots the PC is able to tell abou
 For modders, this mod introduces a variable-based tracking system about the different levels of knowledge the PC and the coalition officers gain throughout the campaign, which could be used for own mods.
 
 # Web address of mod Homepage
-Homepage = 
+Homepage = https://www.gibberlings3.net/mods/other/road_to_discovery/
 
 #  Web address of mod dedicated forum or forum thread 
-Forum = 
+Forum = https://www.gibberlings3.net/forums/forum/231-road-to-discovery/
 
 # if you use Github.com (preferred hosting site), simply use github.com/AccountOrOrgName/RepositoryName    
 # If you use other hosting sites, please check requirements and put direct download link  
-Download = https://github.com/Gitjas/Road_To_Discovery_for_SoD
+Download = https://github.com/Gibberlings3/Road_To_Discovery_for_SoD
 
 # Type of LABELs used by the mod, read more here https://www.gibberlings3.net/forums/topic/32516-tutorial-what-is-label
 LabelType = GloballyUnique
