--- a/sodrtd/sodrtd.ini
+++ b/sodrtd/sodrtd.ini
@@ -36,4 +36,4 @@ Type = Tweak
 
 Before = EET_end
 
-After = bg2fixpack, c#anotherfinehell, c#sodtweaks, EET, imoen_forever, themed_tweaks
+After = ACBre, ajantisbg1, bg2fixpack, biffsodtutorial, c#anotherfinehell, c#brage, c#brandock, c#husam, c#sodboabri, c#sodtweaks, EET, imoen_forever, themed_tweaks
