--- a/sodrtd/sodrtd.ini
+++ b/sodrtd/sodrtd.ini
@@ -11,7 +11,7 @@
 Name = Road to Discovery for SoD
 
 # Author name or nick, don't use email address
-Author = jastey, Lauriel
+Author = jastey
 
 # Short description of the mod, main goals, features etc
 Description = This tweak pack is for the SoD part (also for EET). 
